# Autonomous-Mobile-Manipulator-in-Multi-Floor

./: README.md  README_CN.md  bot.urdf  pipeline_analytics.db
ALPHA_BOT/alphabot_bringup/config/: alphabot.rviz  rviz.rviz
ALPHA_BOT/alphabot_bringup/launch/: bringup_gazebo.launch.py  bringup_rviz.launch.py
ALPHA_BOT/alphabot_control/: CMakeLists.txt  package.xml
ALPHA_BOT/alphabot_control/config/: controllers.yaml
ALPHA_BOT/alphabot_control/launch/: control.launch.py
ALPHA_BOT/alphabot_description/: CMakeLists.txt
ALPHA_BOT/alphabot_description/launch/: view_model.launch.py
ALPHA_BOT/alphabot_description/urdf/: alphabot.urdf.xacro  gazebo.xacro  test.urdf
ALPHA_BOT/alphabot_gazebo/launch/: gazebo.launch.py  spawn_alphabot.launch.py
ALPHA_BOT/alphabot_gazebo/worlds/: elevator_classic.world  empty.world  no_roof_small_warehouse.world
ALPHA_BOT/alphabot_maps/: CMakeLists.txt  package.xml
ALPHA_BOT/alphabot_navigation/: CMakeLists.txt  package.xml
ALPHA_BOT/alphabot_navigation/config/: alpha_bot.pgm  alpha_bot.yaml  bcr_map.yaml  floor_0.pgm  floor_0.yaml  floor_1.pgm  floor_1.yaml  nav2_params.yaml
ALPHA_BOT/alphabot_navigation/launch/: gazebo.launch.py  gazebo_spawn.launch.py  mapping.launch.py  nav2.launch.py  nav2_bringup.launch.py
ALPHA_BOT/alphabot_navigation/scripts/: remapper.py
ALPHA_BOT/alphabot_navigation/src/: map_switcher.cpp
ALPHA_BOT/alphabot_navigation/urdf/: alphabot.urdf.xacro  macros.xacro
ALPHA_BOT/alphabot_sim_bringup/: CMakeLists.txt  package.xml
ALPHA_BOT/alphabot_sim_bringup/launch/: sim_slam_nav.launch.py
ALPHA_BOT/alphabot_slam/: CMakeLists.txt  package.xml
REALMAN_7DOF/: README.md
REALMAN_7DOF/rm_moveit2_config/: README.md
RoboticsInfrastructure/CustomRobots/: CMakeLists.txt  package.xml
RoboticsInfrastructure/Docs/: Realistic_F1_track_creation_en.md  Realistic_F1_track_creation_es.md
RoboticsInfrastructure/Launchers/: 3d_reconstruction.launch.py  car_junction.launch.py  follow_person.launch.py  follow_person_followingcam.launch.py  follow_road.launch.py  gas_station_battery.launch.py  gas_station_battery_ackermann.launch.py  gas_station_line.launch.py  gas_station_line_ackermann.launch.py  gas_station_parking.launch.py  gas_station_parking_ackermann.launch.py  laser_mapping.launch.py  marker_visual_loc.launch.py  monaco_circuit.launch.py  montecarlo_laser_loc.launch.py  montecarlo_laser_loc_headless.launch.py  montecarlo_visual_loc.launch.py  montmelo_circuit.launch.py  montmelo_circuit_ackermann.launch.py  montmelo_circuit_ackermann_followingcam.launch.py  montmelo_circuit_followingcam.launch.py  montreal_circuit.launch.py  montreal_circuit_ackermann.launch.py  montreal_circuit_ackermann_followingcam.launch.py  montreal_circuit_followingcam.launch.py  nurburgring_circuit.launch.py  nurburgring_circuit_ackermann.launch.py  nurburgring_circuit_ackermann_followingcam.launch.py  nurburgring_circuit_followingcam.launch.py  pallet_warehouse.launch.py  pallet_warehouse_with_ackermann_logistic_robot.launch.py  pick_place.launch.py  pick_place_javier.launch.py  prius_360_autoparking.launch.py  prius_autoparking.launch.py  prius_bateria.launch.py  rescue_people.launch.py  restaurant.launch.py  simple_circuit.launch.py  simple_circuit_ackermann.launch.py  (+13 more)
RoboticsInfrastructure/Worlds/: autoparking_prius_360lidar.world  kobuki_1_reconstruction3d.world  laser_mapping.world  marker_visual_loc.world  monaco_circuit.world  montmelo_line_ackermann.world  montmelo_line_ackermann_followingcam.world  montreal_line_ackermann.world  montreal_line_ackermann_followingcam.world  no_roof_small_warehouse_with_ackermann_logistic_robot_followingcam.world  no_roof_small_warehouse_with_robot.world  no_roof_small_warehouse_with_robot_followingcam.world  nurburgring_line_ackermann.world  nurburgring_line_ackermann_followingcam.world  pallet_warehouse_with_ackermann_logistic_robot.world  pallet_warehouse_with_robot.world  pallet_warehouse_with_robot_followingcam.world  restaurant.world  road_junction.world  roomba_1_house.world  roomba_1_house_montecarlo_visual_loc.world  simple_circuit_ackermann.world  simple_circuit_ackermann_followingcam.world  small_laser_mapping.world  spa_circuit.world  warehouse_arm.world
RoboticsInfrastructure/database/: universes.sql
RoboticsInfrastructure/jderobot_drones/: setup.py
RoboticsInfrastructure/scripts/: .env  entrypoint.sh  set_dri_name.sh
RoboticsInfrastructure/test/: README.md  requirements.txt  test_3d_reconstruction.py  test_follow_person_followingcam.py  test_simple_circuit.py  test_vacuum_cleaner.py  utils.py
RoboticsInfrastructure/utils/: model_teleoperator.py
amr_elevator_plugin/: CMakeLists.txt  copy.sh
amr_elevator_plugin/include/: elevator_trigger_plugin.hpp
amr_elevator_plugin/src/: elevator_trigger_plugin.cpp
box_spawner/src/: box_spawner_plugin.cpp
elevator_plugin/: CMakeLists.txt  copy.sh  package.xml
elevator_plugin/env-hooks/: gazebo_plugin_path.dsv.in
elevator_plugin/include/elevator_plugin/: ElevatorPlugin.hh
elevator_plugin/src/: ElevatorPlugin.cc
mobile_manipulator_bringup/: CMakeLists.txt  package.xml
mobile_manipulator_bringup/config/: linear_guide_controllers.yaml
mobile_manipulator_bringup/launch/: mobile_manipulator.launch.py
mobile_manipulator_bringup/urdf/: linear_guide.urdf  mobile_manipulator.xacro
multi_floor_pipeline/: CMakeLists.txt  package.xml
multi_floor_pipeline/behavior_trees/: pipeline.xml
multi_floor_pipeline/config/: poses.yaml
multi_floor_pipeline/include/multi_floor_pipeline/: ros2_bt_nodes.hpp
multi_floor_pipeline/src/: nav2_client.hpp  pipeline_main.cpp  send_goal.cpp
object_spwan_plugin/src/: random_spawner_plugin.cpp
parol6_gui/: mainwindow.cpp
pipeline_manipulator/: CMakeLists.txt  package.xml
pipeline_manipulator/include/pipeline_manipulator/: pick_controller.hpp  pipeline_fsm.hpp
pipeline_manipulator/src/: pick_controller.cpp  pipeline_fsm.cpp  vision_node.cpp
rm_moveit2_config/: README_CN.md
robot_data/: Targets.json
(+189 files in other folders)
