<?xml version="1.0"?>
<package format="3">
  <name>elevator_plugin</name>
  <version>0.0.1</version>
  <description>Gazebo Elevator Plugin</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>cmake</buildtool_depend>
  <depend>gazebo</depend>
</package>
