<?xml version="1.0"?>
<package format="3">
  <name>mobile_manipulator_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for mobile manipulator with linear guide</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime deps -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>position_controllers</exec_depend>
</package>
